fix: #113 & #114 - accordion spacing and accordion (arrow) search (#117)
* feat: add faqs accordion

* add data attributes

* init faq search

* update styles and block name

* add checks

* remove .vscode

* fix: case sensitivity of search string

* fix: #114 & #113

---------

--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -1,3 +1,11 @@
+.accordion-container > .accordion-wrapper+.default-content-wrapper {
+    margin-block: 84px 0;
+} 
+
+.accordion-wrapper {
+    margin-block: 30px 0;
+}
+
 .accordion details {
     border: 1px solid #dadada;
     border-radius: 6px;
